[workspace]
members = ["./wgpu_struct_derive"]

[package]
name = "wgpu_struct"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
smallvec = "1.15.1"
wgpu_struct_derive = { version = "0.1.0", optional = true, path = "./wgpu_struct_derive" }

[features]
default = ["derive"]
derive = ["wgpu_struct_derive"]
